fix(java): retain special native container metadata